--- a/virus_web/WebContent/main_peovince.css
+++ b/virus_web/WebContent/main_peovince.css
@@ -7,7 +7,12 @@
     font:700 50px/50px -apple-system-font,system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Noto Sans,sans-serif,Helvetica Neue,PingFang SC,Hiragino Sans GB,Microsoft YaHei UI,Microsoft YaHei,Arial;
     top:122px
 }
-.cover h1,.cover h2{
+.cover h3{
+    font:36px/36px -apple-system-font,system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Noto Sans,sans-serif,Helvetica Neue,PingFang SC,Hiragino Sans GB,Microsoft YaHei UI,Microsoft YaHei,Arial;
+    top:250px;
+    left:100px;
+}
+.cover h1,.cover h2,.cover h3{
     color:#fff;
     position:absolute;
     left:46px
@@ -19,7 +24,7 @@
 .form_date{
     background:#fff;
     position:absolute;
-    left:300px;
+    left:500px;
     z-index:6;
     width:300px;  
     margin:-240px auto 30px;  
@@ -114,7 +119,7 @@
     display: inline-block;
     font-size: 16px;
 }
-#新增确诊趋势:hover {
+#累计疑似趋势:hover {
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 #累计确诊趋势:hover {
@@ -123,7 +128,7 @@
 #累计治愈:hover {
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
-#新增确诊趋势 {
+#累计疑似趋势 {
     background-color: #4CAF50; /* Green */
     border-radius: 12px;
     width: 200px;
